tests/baselines/reference/protectedStaticNotAccessibleInClodule.errors.txt
protectedStaticNotAccessibleInClodule.ts(8,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
protectedStaticNotAccessibleInClodule.ts(10,22): error TS2445: Property 'bar' is protected and only accessible within class 'C' and its subclasses.


==== protectedStaticNotAccessibleInClodule.ts (2 errors) ====
    // Any attempt to access a private property member outside the class body that contains its declaration results in a compile-time error.
    
    class C {
        public static foo: string;
        protected static bar: string;
    }
    
    module C {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export var f = C.foo; // OK
        export var b = C.bar; // error
                         ~~~
!!! error TS2445: Property 'bar' is protected and only accessible within class 'C' and its subclasses.
    }